# GroupeSEB

./: .gitignore  README.md  currency_data_27-11-2023.json  pyproject.toml  task_1.py  task_2.ipynb  task_3.md
