[tool.poetry]
name = "tefal-task"
version = "0.1.0"
description = ""
authors = ["Naksen <khannanov.rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
xmltodict = "^0.13.0"
black = "^23.11.0"
pandas = "^2.1.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
